Upgraded docker version